--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/assets/teal-climate-logo-1.svg"
+      href="./src/assets/teal-climate-logo-1.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Teal Climate</title>
